[package]
name = "crossword-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
corosensei = { version = "0.1.4", optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
rec-iter = ["dep:corosensei"]

[[bench]]
name = "my_benchmark"
harness = false